dearrow-browser-frontend/index.scss
/* This file is part of the DeArrow Browser project - https://github.com/mini-bomba/DeArrowBrowser
*
*  Copyright (C) 2023-2026 mini_bomba
*  Copyright (C) 2023      mschae23
*  
*  This program is free software: you can redistribute it and/or modify
*  it under the terms of the GNU Affero General Public License as published by
*  the Free Software Foundation, either version 3 of the License, or
*  (at your option) any later version.
*
*  This program is distributed in the hope that it will be useful,
*  but WITHOUT ANY WARRANTY; without even the implied warranty of
*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
*  GNU Affero General Public License for more details.
*
*  You should have received a copy of the GNU Affero General Public License
*  along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/
$light-gray: var(--light-gray);
$gray: var(--gray);
$dark-gray: var(--dark-gray);
$white: var(--white);
$semitransparent: var(--semitransparent);
$mid: var(--mid);
$linkcolor: var(--link-color);

%headercolors {
  background-color: $gray;
}

%flex-column {
  display: flex;
  flex-direction: column;
}

%flex-center {
  justify-content: center;
  align-items: center;
}

@property --theme-hue {
  syntax: "<number> | <angle>";
  inherits: true;
  initial-value: 0deg;
}

@property --theme-saturation {
  syntax: "<percentage>";
  inherits: true;
  initial-value: 0%;
}

html {
  color-scheme: dark;
  --light-gray: hsl(var(--theme-hue), var(--theme-saturation), 20%);
  --gray: hsl(var(--theme-hue), var(--theme-saturation), 13.33%);
  --dark-gray: hsl(var(--theme-hue), var(--theme-saturation), 6.67%);
  --white: hsl(var(--theme-hue), var(--theme-saturation), 93.33%);
  --semitransparent: #0007;
  --mid: hsl(var(--theme-hue), var(--theme-saturation), 50%);
  --link-color: hsl(195, 53.3%, 79%);
}

html[data-theme-light] {
  color-scheme: light;
  --light-gray: hsl(var(--theme-hue), var(--theme-saturation), 80%);
  --gray: hsl(var(--theme-hue), var(--theme-saturation), 86.67%);
  --dark-gray: hsl(var(--theme-hue), var(--theme-saturation), 93.33%);
  --white: hsl(var(--theme-hue), var(--theme-saturation), 6.67%);
  --semitransparent: #0007;
  --mid: hsl(var(--theme-hue), var(--theme-saturation), 50%);
  --link-color: hsl(195, 53.3%, 21%);
}

[title] {
  cursor: help;
}

a [title], .clickable [title] {
  cursor: pointer;
}

.monospaced {
  font-family: monospace;
}

body {
  margin: 0;
  min-height: 100vh;
  @extend %flex-column;
  color: $white;
  background: $dark-gray;
  font-family: sans-serif;

  > * {
    padding: 1rem;
  }
}

#header {
  height: min(10vh, 3rem);
  @extend %headercolors;
  display: flex;
  flex-direction: row;
  gap: 2rem;

  &.sticky {
    position: sticky;
    top: 0;
    z-index: 1;
  }
  
  > a, > a > img {
    height: 100%;
  }
  
  > div {
    display: flex;
    align-items: center;
    flex-direction: row;
    flex-grow: 1;
    gap: 2rem;
  }
  
  h1 {
    font-size: 2rem;
    margin: 0;
    flex-grow: 1;
  }

  #settings-button {
    font-size: 2rem;
  }

  .header-badge {
    background-color: $light-gray;
    border-radius: 0.5rem;
    padding: 0.5rem;
  }

  .current-user-badge {
    display: flex;
    flex-direction: column;

    #current-user-id, #current-user-name {
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
    }
    
    #current-user-id {
      contain: inline-size;
    }
  }

  #async-tasks-badge {
    display: flex;
    flex-direction: row;
    font-size: 1.5rem;
    gap: 0.25em;
  }
}

#searchbar {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  
  > div {
    @extend %flex-column;
    align-items: center;
    font-size: 1.5rem;

    input {
      font-size: 1rem;
      padding: .375rem .75rem;
    }
  }

  ul {
    margin: 0;
    list-style: none;
    padding: 0 1.5em;
  }
}

#footer {
  @extend %headercolors;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-size: 1rem;

  > * {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    min-width: 25vw;
  }

  >:last-child {
    text-align: right;
  }
}

table caption {
  font-weight: bold;
}
/* ... */

